fix(modal): Fixed modal styling in logo grid per design feedback.
* fix(): Tweaked logo grid for design feedback.

* fix(): Tweaked logo grid modal.

* fix(storybook): Changed grid view to 12-columns.

* fix(grid): Tweaked md and lg breakpoint widths.

* fix(): Updated logo grid with new logos.

* Ran prettier on logo grid story.

* Fixed logo ratios

* Fixed logo grid modal columns on lg breakpoint.

* fix(modal): Tweaked the modal to the updated design spec.

* fixed modal overflow scrollbars.

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -45,7 +45,8 @@ $devices: (
 ) !default;
 
 /// Fonts
-$font-family: 'TWK Everett', Helvetica, Arial, sans-serif !default;
+$font-family-lg: 'TWK Everett', Helvetica, Arial, sans-serif !default;
+$font-family: Helvetica, Arial, sans-serif !default;
 $icon-font-family: 'kyndryl-Icons' !default;
 $font-large: #{px2rem(18)} !default;
 $font-size: #{px2rem(16)} !default;
